--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,21 +1,4 @@
 <app-navbar></app-navbar>
-<div id="carouselExample" class="carousel slide">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../../../assets/images/descuento1.png" class="img-fluid w-50"  alt="">
-      <img src="../../../assets/images/descuento2.png" class="img-fluid w-50"  alt="">
-    </div>
-    <div class="carousel-item">
-      <img src="../../../assets/images/megas1.png" class="img-fluid w-50" alt="">
-      <img src="../../../assets/images/megas2.png" class="img-fluid w-50"  alt="">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+<div>
+  <app-carousel></app-carousel>
 </div>
