Actualización de componente navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
           <img src="../../../assets/images/buscar.png" alt="" />
         </a>
       </div>
-      <button class="btn btn-mi-tif"  routerLinkActive="active" [routerLink]="['/login']">Mi TIF</button>
+      <button class="btn btn-mi-tif" [routerLink]="['/login']">Mi TIF</button>
       <a class="navbar-brand" href="">
         <img
           src="../../../assets/images/icon_shopping_cart.svg"
