Actualización de componente login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,7 +29,7 @@
     <hr />
     <div class="box-register">
       <p>¿No tienes cuenta?</p>
-      <button class="btn-display-register" type="button" routerLinkActive="active" [routerLink]="['/register']" >Registrese</button>
+      <button class="btn-display-register" type="button" [routerLink]="['/register']" >Registrese</button>
     </div>
   </div>
 </div>
