--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -5,42 +5,70 @@ nav.color{
       width: 50px;
     }
   }
-  button.btn-mi-tif{
-    outline: solid #c1ff72;
-    color: #c1ff72;
-    margin-right: 50px;
-  }
-  .box-search{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: transparent;
-    border-radius: 12px;
-    width: 15em;
-    height: 2.3em;
-    outline: solid #c1ff72;
 
-    .search{
-      outline: none;
-      border: 0;
-      background-color: transparent;
 
-    }
-    .search::placeholder{
-      color:#c1ff72;
-      opacity: 0.2;
-    }
-    a{
-      img{
-        width: 20px;
-      }
-    }
-  }
   .collapse{
     ul{
       li{
         a{
           color: #c1ff72;
+        }
+      }
+    }
+
+    .box-search{
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      background-color: transparent;
+      border-radius: 12px;
+      width: 15em;
+      height: 2.3em;
+      outline: solid #c1ff72;
+
+      .search{
+        outline: none;
+        border: 0;
+        background-color: transparent;
+
+      }
+      .search::placeholder{
+        color:#c1ff72;
+        opacity: 0.2;
+      }
+      a{
+        img{
+          width: 20px;
+        }
+      }
+    }
+
+    button.btn-mi-tif{
+      outline: solid #c1ff72;
+      color: #c1ff72;
+      margin-right: 50px;
+    }
+
+    .box-else{
+      display: flex;
+      align-items: center;
+      width: 200px;
+      justify-content: space-around;
+
+      a{
+        text-decoration: none;
+        color:#c1ff72;
+      }
+      img{
+        transform: rotate(90deg);
+      }
+
+      button{
+        background-color: transparent;
+        border: 0;
+        img{
+          transform: rotate(-180deg);
+          width: 40px;
         }
       }
     }
