--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,53 +1,82 @@
-<div class="containeer-register">
+<div class="container content-register">
   <div class="box-register">
-    <div>
-      <h2>Registro TIF</h2>
-    </div>
-    <div>
-      <form>
-        <div>
-          <label class="form-label" >Nombre</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="name"
+    <h2>Registro TIF</h2>
+    <form [formGroup]="formRegister" (ngSubmit)="register()" novalidate>
+      <div>
+        <label class="form-label">Tipo de documento</label>
+        <select
+          class="form-select"
+          aria-label="Default select example"
+          formControlName="documentType"
+        >
+          <option *ngFor="let docType of documentsType" [ngValue]="docType">
+            {{ docType }}
+          </option>
+        </select>
+      </div>
+      <div>
+        <label class="form-label">Numero de documento</label>
+        <input
+          type="text"
+          class="form-control"
+          formControlName="documentNumber"
+          [class.is-invalid]="docNumNoValido"
+        />
+        <small class="text-danger" *ngIf="docNumNoValido">Campo requerido</small>
+      </div>
+      <div>
+        <label class="form-label" >Nombre</label>
+        <input
+          type="text"
+          class="form-control"
+          formControlName="name"
+          [class.is-invalid]="nameNoValido"
+        />
+        <small class="text-danger" *ngIf="nameNoValido">Campo requerido</small>
+      </div>
+      <div>
+        <label class="form-label" >Apellido</label>
+        <input
+          type="text"
+          class="form-control"
+          formControlName="lastnameNoValido"
+          [class.is-invalid]="lastnameNoValido"
+        />
+        <small class="text-danger" *ngIf="lastnameNoValido">Campo requerido</small>
+      </div>
+      <div>
+        <label class="form-label">Email</label>
+        <input
+          type="text"
+          class="form-control"
+          formControlName="email"
+          placeholder="ejemplo@gmail.com"
+          [class.is-invalid]="emailNoValido"
           />
-        </div>
-        <div>
-          <label class="form-label" >Apellido</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="lastname"
-          />
-        </div>
-        <div>
-          <label class="form-label">Email</label>
-          <input
-            type="text"
-            class="form-control"
-            formControlName="email"
-            placeholder="ejemplo@gmail.com"/>
-        </div>
-        <div>
-          <label class="form-label" >Contraseña</label>
-          <input
-            type="password"
-            class="form-control"
-            formControlName="password"
-            placeholder="********"
-          />
-        </div>
-        <div>
-          <label class="form-label">Verificar contraseña</label>
-          <input
-            type="password"
-            class="form-control"
-            formControlName="password"
-          />
-        </div>
-        <input class="submit" type="submit" value="Registrarse"/>
-      </form>
-    </div>
+          <small class="text-danger" *ngIf="emailNoValido">Campo requerido</small>
+      </div>
+      <div>
+        <label class="form-label" >Contraseña</label>
+        <input
+          type="password"
+          class="form-control"
+          formControlName="password"
+          placeholder="********"
+          [class.is-invalid]="passwordNoValido"
+        />
+        <small class="text-danger" *ngIf="passwordNoValido">Campo requerido <br> La contraseña debe tener al menos: <br> Una letra mayúscula <br> Una letra minuscula <br>
+        Min 8 y máx 16 caracteres <br> Algunos de los siguientes simbolos: #$@!%&*?</small>
+      </div>
+      <div>
+        <label class="form-label">Validar contraseña</label>
+        <input
+          type="password"
+          class="form-control"
+          formControlName="validatePassword"
+        />
+      </div>
+      <small class="text-danger" >Campo requerido</small>
+      <input class="submit" type="submit" value="Registrarse"/>
+    </form>
   </div>
 </div>
